upgraded to ATD 14.0.4 Initialize hooks for a scenario only once Updated log messages and tests